api/swim_form/src/tests/derive/form/empty_tag.stderr
error: New tag cannot be empty
  --> $DIR/src/tests/derive/form/empty_tag.rs:18:14
   |
18 |     #[derive(Form)]
   |              ^^^^
